@@ -120,7 +120,9 @@ namespace lsp
                 void                            sync_button_pos();
 
             protected:
+                static status_t                 slot_begin_edit(Widget *sender, void *ptr, void *data);
                 static status_t                 slot_on_change(Widget *sender, void *ptr, void *data);
+                static status_t                 slot_end_edit(Widget *sender, void *ptr, void *data);
 
             protected:
                 virtual void                    size_request(ws::size_limit_t *r);
@@ -161,7 +163,11 @@ namespace lsp
 
                 virtual ws::mouse_pointer_t     current_pointer();
 
+                virtual status_t                on_begin_edit();
+
                 virtual status_t                on_change();
+
+                virtual status_t                on_end_edit();
 
                 virtual status_t                on_mouse_down(const ws::event_t *e);
 
