@@ -6,7 +6,9 @@
 * Fixed invalid tk::TF_VERTICAL tether flag value.
 * Added possibility to hide check/radio box for unchecked tk::MenuItem objects.
 * Added SLOT_BEGIN_EDIT and SLOT_END_EDIT slot events.
-* Fixed improper value calculation in cycling knob when clicking on the knob's scale.  
+* Fixed improper value calculation in cycling knob when clicking on the knob's scale.
+* Added support of SLOT_BEGIN_EDIT and SLOT_END_EDIT by tk::Knob, tk::Fader,
+  tk::ScrollBar, tk::GraphDot and tk::GraphMarker widgets.
 * Updated dependencies file.
 
 === 1.0.7 ===
